<resources>
    <string name="app_name">InClass01</string>
    <string name="discount_calculator">Discount Calculator</string>
    <string name="item_price">Item Price: </string>
    <string name="enter_list_price">Enter List Price</string>
    <string name="sale">Sale %: </string>
    <string name="sale_10">10%</string>
    <string name="sale_15">15%</string>
    <string name="sale_18">18%</string>
    <string name="sale_custom">Custom</string>
    <string name="custom">Custom %: </string>
    <string name="custom_25">25%</string>
    <string name="discount">Discount: </string>
    <string name="discount_value">0.00</string>
    <string name="final_price">Final Price: </string>
    <string name="final_price_value">0.00</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_calculate">Calculate</string>
</resources>